[gd_scene load_steps=30 format=2]

[ext_resource path="res://levels/BaseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Units/BunnyUnit.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/textures/tentacle_end.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/tentacle_segment.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/tentacle.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/tentacle_end3.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/godinscene.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/tentacle_end2.png" type="Texture" id=8]
[ext_resource path="res://Units/CowUnit.tscn" type="PackedScene" id=9]
[ext_resource path="res://Units/DogUnit.tscn" type="PackedScene" id=10]
[ext_resource path="res://Units/PigeonUnit.tscn" type="PackedScene" id=11]
[ext_resource path="res://levels/Level4.gd" type="Script" id=12]
[ext_resource path="res://assets/textures/you-died.png" type="Texture" id=13]
[ext_resource path="res://assets/audio/you-died.wav" type="AudioStream" id=14]

[sub_resource type="Animation" id=23]
resource_name = "you-died"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 4.1, 7.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 7.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1.5, 1.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 7.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 398, 208 ), Vector2( 213, 87 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( -1, 0.1, 4.1, 7.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpatialMaterial" id=13]
albedo_texture = ExtResource( 7 )

[sub_resource type="QuadMesh" id=15]
material = SubResource( 13 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 5 )

[sub_resource type="QuadMesh" id=16]
material = SubResource( 5 )
size = Vector2( 10, 3 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=17]
material = SubResource( 7 )
size = Vector2( 3, 5 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 4 )

[sub_resource type="QuadMesh" id=18]
material = SubResource( 9 )
size = Vector2( 3, 3 )

[sub_resource type="SpatialMaterial" id=19]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 4 )

[sub_resource type="QuadMesh" id=20]
material = SubResource( 19 )
size = Vector2( 3, 3 )

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 8 )

[sub_resource type="QuadMesh" id=21]
material = SubResource( 11 )
size = Vector2( 3, 6 )

[sub_resource type="SpatialMaterial" id=14]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 6 )

[sub_resource type="QuadMesh" id=22]
material = SubResource( 14 )
size = Vector2( 4, 8 )

[node name="Level4" instance=ExtResource( 1 )]
script = ExtResource( 12 )
do_mutation = false

[node name="YouDied" type="ColorRect" parent="." index="2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.025 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="YouDied" index="0"]
self_modulate = Color( 0, 0, 0, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -244.434
margin_top = -153.592
margin_right = 330.566
margin_bottom = 196.408
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.809211, 0.809211 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="YouDied" index="1"]
reset_on_save = false
anims/you-died = SubResource( 23 )

[node name="Camera" parent="." index="4"]
transform = Transform( 0.707107, 0.353553, -0.612372, 0, 0.866025, 0.5, 0.707107, -0.353553, 0.612372, -5.312, 5.131, 2.903 )
size = 10.02

[node name="GridMap" parent="World" index="0"]
data = {
"cells": PoolIntArray( 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 65541, 0, 3, 65542, 0, 6, -65536, 0, 5, -6, 0, 5, -1, 0, 5, 0, 1, 1, 1, 1, 1, 2, 1, 1, 3, 1, 1, 4, 1, 1, 5, 1, 1, 6, 1, 1, 65530, 1, 1, 65531, 1, 1, 65532, 1, 1, 65533, 1, 1, 65534, 1, 1, 65535, 1, 1, 65540, 1, 3, 65541, 1, 6, 65542, 1, 6, 131070, 1, 4, 131071, 1, 4, -65530, 1, 5, -6, 1, 5, 0, 2, 1, 1, 2, 1, 2, 2, 1, 3, 2, 1, 4, 2, 1, 5, 2, 1, 65531, 2, 1, 65532, 2, 1, 65533, 2, 1, 65534, 2, 1, 65535, 2, 1, 65540, 2, 6, 65541, 2, 3, 131070, 2, 4, 131071, 2, 4, -65531, 2, 5, -5, 2, 5, 0, 3, 1, 1, 3, 1, 2, 3, 1, 3, 3, 1, 4, 3, 1, 65532, 3, 1, 65533, 3, 1, 65534, 3, 1, 65535, 3, 1, 131071, 3, 4, -65536, 3, 5, -65535, 3, 5, -65534, 3, 5, -65533, 3, 5, -65532, 3, 5, -4, 3, 5, -3, 3, 5, -2, 3, 5, -1, 3, 5, 0, 65527, 1, 1, 65527, 1, 2, 65527, 1, 3, 65527, 1, 4, 65527, 1, 65532, 65527, 1, 65533, 65527, 1, 65534, 65527, 1, 65535, 65527, 1, 65539, 65527, 6, 65540, 65527, 3, -4, 65527, 5, 0, 65528, 1, 1, 65528, 1, 2, 65528, 1, 3, 65528, 1, 4, 65528, 1, 5, 65528, 1, 65531, 65528, 1, 65532, 65528, 1, 65533, 65528, 1, 65534, 65528, 1, 65535, 65528, 1, 65539, 65528, 3, 65540, 65528, 6, 65541, 65528, 3, 131070, 65528, 4, 131071, 65528, 4, -5, 65528, 5, 0, 65529, 1, 1, 65529, 1, 2, 65529, 1, 3, 65529, 1, 4, 65529, 1, 5, 65529, 1, 6, 65529, 1, 65530, 65529, 1, 65531, 65529, 1, 65532, 65529, 1, 65533, 65529, 1, 65534, 65529, 1, 65535, 65529, 1, 65536, 65529, 4, 65538, 65529, 4, 65540, 65529, 3, 65541, 65529, 3, 65542, 65529, 6, 131069, 65529, 4, 131070, 65529, 4, 131071, 65529, 4, -6, 65529, 5, 0, 65530, 1, 1, 65530, 1, 2, 65530, 1, 3, 65530, 1, 4, 65530, 1, 5, 65530, 1, 6, 65530, 1, 65530, 65530, 1, 65531, 65530, 1, 65532, 65530, 1, 65533, 65530, 1, 65534, 65530, 1, 65535, 65530, 1, 65537, 65530, 4, 65538, 65530, 4, 65540, 65530, 3, 65541, 65530, 6, 131070, 65530, 4, 131071, 65530, 4, -65536, 65530, 5, -6, 65530, 5, -1, 65530, 5, 0, 65531, 1, 1, 65531, 1, 2, 65531, 1, 3, 65531, 1, 4, 65531, 1, 5, 65531, 1, 6, 65531, 1, 65530, 65531, 1, 65531, 65531, 1, 65532, 65531, 1, 65533, 65531, 1, 65534, 65531, 1, 65535, 65531, 1, -65536, 65531, 5, -6, 65531, 5, -1, 65531, 5, 1, 65532, 1, 2, 65532, 1, 3, 65532, 1, 4, 65532, 1, 5, 65532, 1, 6, 65532, 1, 65530, 65532, 1, 65531, 65532, 1, 65532, 65532, 1, 65533, 65532, 1, 65534, 65532, 1, 131067, 65532, 4, 131068, 65532, 4, -65535, 65532, 5, -6, 65532, 5, -2, 65532, 5, 2, 65533, 1, 3, 65533, 1, 4, 65533, 1, 5, 65533, 1, 6, 65533, 1, 65530, 65533, 1, 65531, 65533, 1, 65532, 65533, 1, 65533, 65533, 1, 65540, 65533, 4, 65541, 65533, 4, 131067, 65533, 4, 131068, 65533, 4, 131069, 65533, 4, -65534, 65533, 5, -6, 65533, 5, -4, 65533, 5, -3, 65533, 5, 2, 65534, 1, 3, 65534, 1, 4, 65534, 1, 5, 65534, 1, 6, 65534, 1, 65530, 65534, 1, 65531, 65534, 1, 65532, 65534, 1, 65533, 65534, 1, 65539, 65534, 4, 65540, 65534, 4, 65541, 65534, 4, -65534, 65534, 5, -65533, 65534, 5, -65532, 65534, 5, -65531, 65534, 5, -65530, 65534, 5, -6, 65534, 5, 1, 65535, 1, 2, 65535, 1, 3, 65535, 1, 4, 65535, 1, 5, 65535, 1, 6, 65535, 1, 65530, 65535, 1, 65531, 65535, 1, 65532, 65535, 1, 65533, 65535, 1, 65534, 65535, 1, 65540, 65535, 4, 65541, 65535, 4, -65535, 65535, 5, -6, 65535, 5, -2, 65535, 5 )
}

[node name="BunnyUnit" parent="World" index="1" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -1 )
stage = 1

[node name="CowUnit" parent="World" index="2" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 1 )
stage = 2

[node name="DogUnit" parent="World" index="3" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -5 )
stage = 1

[node name="PigeonUnit" parent="World" index="4" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -7 )
stage = 1

[node name="God" type="Spatial" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.239, 0.107, 0.576 )
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance3" type="MeshInstance" parent="God" index="0"]
transform = Transform( 1.2941, 1.25, -0.933013, 5.65667e-08, 4.82963, 0.258819, 4.82963, -0.334936, 0.25, 8.5, 1.5, -4 )
mesh = SubResource( 15 )
material/0 = null
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance" type="MeshInstance" parent="God" index="1"]
transform = Transform( 0.866025, -0.5, -2.18557e-08, 0, -4.37114e-08, 1, -0.5, -0.866025, -3.78552e-08, 4.5, -2, 2 )
mesh = SubResource( 16 )
material/0 = null
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance2" type="MeshInstance" parent="God" index="2"]
transform = Transform( 0.866025, 0, -0.5, 0.12941, 0.965926, 0.224144, 0.482963, -0.258819, 0.836516, -6.5, 0.5, -1.5 )
mesh = SubResource( 17 )
material/0 = null
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance7" type="MeshInstance" parent="God" index="3"]
transform = Transform( 0.965924, 0.25, -0.0669872, 0, 0.258819, 0.965926, 0.258819, -0.933011, 0.25, 0.999998, -0.999999, -3.99999 )
mesh = SubResource( 18 )
skeleton = NodePath("../MeshInstance4")
material/0 = null
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance4" type="MeshInstance" parent="God" index="4"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.5, -2, 4.5 )
mesh = SubResource( 20 )
material/0 = null
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance5" type="MeshInstance" parent="God" index="5"]
transform = Transform( 0.965926, 7.45058e-09, -0.258819, 0.0669873, 0.965926, 0.25, 0.25, -0.258819, 0.933013, 0, 1.5, -10.5 )
mesh = SubResource( 21 )
material/0 = null
__meta__ = {
"_edit_lock_": true
}

[node name="MeshInstance6" type="MeshInstance" parent="God" index="6"]
transform = Transform( 0.965926, 0, -0.258819, 0.12941, 0.866025, 0.482963, 0.224144, -0.5, 0.836516, -6, 0, -7.5 )
mesh = SubResource( 22 )
material/0 = null
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnLocations" parent="." index="8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 2.5, 2.5 )

[node name="YouDiedPlayer" type="AudioStreamPlayer" parent="." index="10"]
stream = ExtResource( 14 )

[connection signal="animation_finished" from="YouDied/AnimationPlayer" to="." method="_on_AnimationPlayer_youdied_finished"]
